fix download file on ios

--- a/src/app/poi/poi.component.scss
+++ b/src/app/poi/poi.component.scss
@@ -57,7 +57,8 @@
 .last-updated {
   width: 50%;
   padding-left: 40px;
-  display: contents;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .address-link {
